--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -360,7 +361,7 @@
             </objects>
             <point key="canvasLocation" x="1399.2366412213739" y="254.92957746478874"/>
         </scene>
-        <!--Brand DetailsVC-->
+        <!--Brands Dtails-->
         <scene sceneID="HLG-YB-8mS">
             <objects>
                 <viewController storyboardIdentifier="BrandDetailsVC" id="Riw-Px-agT" customClass="BrandDetailsVC" customModule="InStock" customModuleProvider="target" sceneMemberID="viewController">
@@ -463,7 +464,7 @@
                             <constraint firstItem="sQC-9f-qfS" firstAttribute="bottom" secondItem="6bV-4q-qWI" secondAttribute="bottom" id="yc2-lv-ODL"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="dKW-41-bqa"/>
+                    <navigationItem key="navigationItem" title="Brands Dtails" id="dKW-41-bqa"/>
                     <connections>
                         <outlet property="brandDetailsCollectionView" destination="sQC-9f-qfS" id="GhL-iI-YDA"/>
                     </connections>
@@ -480,6 +481,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="75a-xI-csq">
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="AccentColor"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" name="AccentColor"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -876,30 +883,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="person.crop.circle.dashed" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AYO-8F-jrD">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="AYO-8F-jrD">
                                 <rect key="frame" x="146" y="169" width="100" height="87"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnU-kJ-pfH">
-                                <rect key="frame" x="85" y="90" width="222" height="60"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnU-kJ-pfH">
+                                <rect key="frame" x="85" y="90" width="222" height="49"/>
                                 <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="22"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Full Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZG-ii-5ux">
                                 <rect key="frame" x="85" y="287" width="222" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="AccentColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HvA-pq-2Lm">
                                 <rect key="frame" x="85" y="359" width="222" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="AccentColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEw-aA-hx7">
@@ -917,6 +922,13 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VfZ-9Q-Ded"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MnU-kJ-pfH" firstAttribute="leading" secondItem="AYO-8F-jrD" secondAttribute="trailing" constant="-161" id="I4b-sn-NLa"/>
+                            <constraint firstItem="AYO-8F-jrD" firstAttribute="top" secondItem="MnU-kJ-pfH" secondAttribute="bottom" constant="30" id="LRO-i0-PYx"/>
+                            <constraint firstItem="VfZ-9Q-Ded" firstAttribute="trailing" secondItem="MnU-kJ-pfH" secondAttribute="trailing" constant="86" id="beG-c3-MrU"/>
+                            <constraint firstItem="VfZ-9Q-Ded" firstAttribute="top" secondItem="MnU-kJ-pfH" secondAttribute="top" constant="13" id="j5l-Va-RvG"/>
+                            <constraint firstItem="MnU-kJ-pfH" firstAttribute="leading" secondItem="VfZ-9Q-Ded" secondAttribute="leading" constant="85" id="uvG-XV-EYS"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5g8-7g-VKq">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="settings" id="i8B-UQ-3RQ">
@@ -933,7 +945,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fey-El-J5N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6711" y="-1200"/>
+            <point key="canvasLocation" x="6710.6870229007627" y="-1200"/>
         </scene>
         <!--SettingsVC-->
         <scene sceneID="hhp-Hh-oJa">
@@ -1957,8 +1969,26 @@
                                 <rect key="frame" x="167" y="688" width="210" height="47"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Place Order">
-                                    <fontDescription key="titleFontDescription" name="Georgia-Bold" family="Georgia" pointSize="29"/>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Place">
+                                            <attributes>
+                                                <font key="NSFont" size="24" name="Georgia"/>
+                                                <font key="NSOriginalFont" size="24" name="ZapfDingbatsITC"/>
+                                            </attributes>
+                                        </fragment>
+                                        <fragment content=" ">
+                                            <attributes>
+                                                <font key="NSFont" size="24" name="Georgia"/>
+                                            </attributes>
+                                        </fragment>
+                                        <fragment content="Order">
+                                            <attributes>
+                                                <font key="NSFont" size="24" name="Georgia"/>
+                                                <font key="NSOriginalFont" size="24" name="ZapfDingbatsITC"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="baseBackgroundColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </buttonConfiguration>
@@ -2302,7 +2332,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Afnan.Emad777@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ff-xB-3CE">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="afnanelfazary@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ff-xB-3CE">
                                 <rect key="frame" x="20" y="622" width="353" height="26.333333333333371"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
@@ -2353,7 +2383,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wishlist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohg-ci-MNM">
                                 <rect key="frame" x="16" y="84" width="361" height="28.666666666666671"/>
                                 <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="26"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="AccentColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IeB-ck-MNx">
@@ -2470,12 +2500,15 @@
         <image name="minus.circle" catalog="system" width="128" height="123"/>
         <image name="person" catalog="system" width="128" height="121"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
-        <image name="person.crop.circle.dashed" catalog="system" width="128" height="123"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="plus.circle" catalog="system" width="128" height="123"/>
+        <image name="profile" width="772" height="692"/>
         <image name="rectangle.portrait.and.arrow.forward.fill" catalog="system" width="128" height="108"/>
         <image name="settings" width="64" height="64"/>
         <image name="wel" width="7730" height="7730"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="0.49803921568627452" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
